added fontawesome script

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,200..1000&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/357c06fe96.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <app-root></app-root>
